syntax = "proto3";

import "shiva/core/communication_objects/metrics.proto";
import "shiva/core/communication_objects/helpers.proto";

package communication_objects;

service MetaLearner {
    rpc GetConfigs(SimpleMessage) returns (SimpleMessage);
    rpc SendSpecs(SimpleMessage) returns (Empty);
    rpc SendMetrics(MetricsProto) returns (Empty);
}